--- a/src/Resources/templates/remove.php.twig
+++ b/src/Resources/templates/remove.php.twig
@@ -4,12 +4,13 @@
  * {{ property.documentation | raw }}
  {% endperline %}
  {% else -%}
- * Remove {{ property.name | singularize }}
+ * Removes the given {{ property.name | singularize }} from this collection.
  {% endif -%}
  *
- * @param {{ property.typeHint }} ${{ property.name | singularize }}
- * @return {{ property.class }}
  * @throws \BadMethodCallException if the number of arguments is not correct
+ *
+ * @param  {{ property.typeHint }} ${{ property.name | singularize }}
+ * @return $this|{{ property.class }}
  */
 {{ property.getRemoveVisibility() }} function remove{{ property.name | singularize | classify }}({{ property.typeHint }} ${{ property.name | singularize }})
 {
@@ -43,5 +44,6 @@
 {% endif %}
     $property->setAccessible(false);
 {% endif %}
+
     return $this;
 }
