Account for inheritance with custom type hint
When using a custom type hint on a collection and generate
an `add` method, reflection on the object will not be able
to access the private property of the parent class and when
using reflection on the class type of the relation an exception
will be thrown by PHP7.1 when the added object is of the
type hinted type and does not implement or extends the real
type, although the real type may implement the type hint type.

See `test/Generator/PracticalVehicleOwnerTest.php` for the
different cases and how they are handled.

--- a/src/Resources/templates/add.php.twig
+++ b/src/Resources/templates/add.php.twig
@@ -50,7 +50,15 @@
 {% endif %}
 {% if property.referencedProperty %}
     try {
-        $property = new \ReflectionProperty(${{ property.name | singularize }}, '{{ property.referencedProperty }}');
+{% if property.type == property.typeHint %}
+        $property = new \ReflectionProperty({{ property.type }}::class, '{{ property.referencedProperty }}');
+{% else %}
+        if (${{ property.name | singularize }} instanceof {{ property.type }}) {
+            $property = new \ReflectionProperty({{ property.type }}::class, '{{ property.referencedProperty }}');
+        } else {
+            $property = new \ReflectionProperty(${{ property.name | singularize }}, '{{ property.referencedProperty }}');
+        }
+{% endif %}
     } catch (\ReflectionException $e) {
         throw new \Hostnet\Component\AccessorGenerator\Exception\MissingPropertyException(
             $e->getMessage(),
