Fixed the absolute paths that sneaked in.

--- a/src/Resources/templates/keys.php.twig
+++ b/src/Resources/templates/keys.php.twig
@@ -4,7 +4,8 @@
 namespace {{ namespace }};
 
 /**
- * This class provides methods to add your own key on
+ * This class holds all the keys for the Traits in the same directory. It also
+ * provides methods to statically add keys (useful when testing).
  */
 class KeyRegistry
 {
