--- a/src/Resources/templates/get.php.twig
+++ b/src/Resources/templates/get.php.twig
@@ -75,7 +75,7 @@
     }
 
     if (false === ($private_key = openssl_get_privatekey($private_key_path))) {
-        throw new \InvalidArgumentException(sprintf('The path %s does not contain a private key.', $private_key_path));
+        throw new \InvalidArgumentException(sprintf('The path "%s" does not contain a private key.', $private_key_path));
     }
 
     list($env_key_length, $iv_length, $pieces) = explode(',', $this->{{ property.name }}, 3);
