--- a/src/Resources/templates/keys.php.twig
+++ b/src/Resources/templates/keys.php.twig
@@ -9,33 +9,63 @@ namespace {{ namespace }};
  */
 class KeyRegistry
 {
+    /**
+     * @var array
+     */
     private static $public_key_paths = [
 {% for alias, path in keys %}
        '{{ alias }}' => '{{ path['public-key'] ? 'file://' ~ base_path ~ '/' ~ path['public-key'] : ''}}',
 {% endfor %}
     ];
 
+    /**
+     * @var array
+     */
     private static $private_key_paths = [
 {% for alias, path in keys %}
        '{{ alias }}' => '{{ path['private-key'] ? 'file://' ~ base_path ~ '/' ~ path['private-key'] : ''}}',
 {% endfor %}
     ];
 
+    /**
+     * Gets the file path where the public key is located for the given encryption alias.
+     *
+     * @return string
+     */
     public static function getPublicKeyPath($alias)
     {
         return self::$public_key_paths[$alias] ?? '';
     }
 
+    /**
+     * Gets the file path where the private key is located for the given encryption alias.
+     *
+     * @return string
+     */
     public static function getPrivateKeyPath($alias)
     {
         return self::$private_key_paths[$alias] ?? '';
     }
 
+    /**
+     * Add a public key file path for a specific alias manually. If the alias already
+     * exists, the existing path is overwritten.
+     *
+     * @param string $alias
+     * @param string $path
+     */
     public static function addPublicKeyPath($alias, $path)
     {
         self::$public_key_paths[$alias] = $path;
     }
 
+    /**
+     * Add a private key file path for a specific alias manually. If the alias already
+     * exists, the existing path is overwritten.
+     *
+     * @param string $alias
+     * @param string $path
+     */
     public static function addPrivateKeyPath($alias, $path)
     {
         self::$private_key_paths[$alias] = $path;
