--- a/src/Resources/templates/get.php.twig
+++ b/src/Resources/templates/get.php.twig
@@ -21,7 +21,7 @@
  * @return {{ (property.isComplexType ? property.typeHint : property.type) | phptype }}{{ property.isNullable or not property.willGenerateStrict ? '|null' }}
  {% endif -%}
  */
-{{ property.getGetVisibility() }} function {{ getter }}(){% if property.type != 'resource' %}: {% if property.collection -%} iterable
+{{ property.getGetVisibility() }} function {{ getter }}(){% if property.type != 'resource' and property.type != 'object' %}: {% if property.collection -%} iterable
 {% else -%}{{ property.isNullable or not property.willGenerateStrict ? '?' }}{{ (property.isComplexType ? property.typeHint : property.type) | phptype }}
 {% endif %}{% else %}
 
