--- a/src/Resources/templates/set.php.twig
+++ b/src/Resources/templates/set.php.twig
@@ -42,38 +42,38 @@
 )
 {
 {% if property.default and property.isFixedPointNumber %}
-    if (func_num_args() > 2) {
+    if (\func_num_args() > 2) {
         throw new \BadMethodCallException(
             sprintf(
                 'set{{ property.name | classify }}() has two optional arguments but %d given.',
-                func_num_args()
+                \func_num_args()
             )
         );
     }
 {% elseif property.default or property.isNullable %}
-    if (func_num_args() > 1) {
+    if (\func_num_args() > 1) {
         throw new \BadMethodCallException(
             sprintf(
                 'set{{ property.name | classify }}() has one optional argument but %d given.',
-                func_num_args()
+                \func_num_args()
             )
         );
     }
 {% elseif property.isFixedPointNumber %}
-    if (func_num_args() > 2) {
+    if (\func_num_args() > 2) {
         throw new \BadMethodCallException(
             sprintf(
                 'set{{ property.name | classify }}() has one mandatory and one optional argument but %d given.',
-                func_num_args()
+                \func_num_args()
             )
         );
     }
 {% else %}
-    if (func_num_args() != 1) {
+    if (\func_num_args() != 1) {
         throw new \BadMethodCallException(
             sprintf(
                 'set{{ property.name | classify }}() has one argument but %d given.',
-                func_num_args()
+                \func_num_args()
             )
         );
     }
@@ -100,8 +100,8 @@
 {% elseif property.type == 'string' %}
 
     if (${{ property.name }} === null
-        || is_scalar(${{ property.name }})
-        || is_callable([${{ property.name }}, '__toString'])
+        || \is_scalar(${{ property.name }})
+        || \is_callable([${{ property.name }}, '__toString'])
     ) {
         ${{ property.name }} = (string)${{ property.name }};
     } else {
@@ -111,7 +111,7 @@
     }
 {% else %}
 
-    if (!is_{{ property.type == 'boolean' ? 'bool' : property.type }}(${{ property.name }})) {
+    if (!\is_{{ property.type == 'boolean' ? 'bool' : property.type }}(${{ property.name }})) {
         throw new \InvalidArgumentException(
             'Parameter {{ property.name }} must be {{ property.type }}.'
         );
