--- a/src/Resources/templates/remove.php.twig
+++ b/src/Resources/templates/remove.php.twig
@@ -15,11 +15,11 @@
  */
 {{ property.getRemoveVisibility() }} function remove{{ property.name | singularize | classify }}({{ property.typeHint }} ${{ property.name | singularize }})
 {
-    if (func_num_args() != 1) {
+    if (\func_num_args() != 1) {
         throw new \BadMethodCallException(
             sprintf(
                 'remove{{ property.name | classify }}() has one argument but %d given.',
-                func_num_args()
+                \func_num_args()
             )
         );
     }
