Strict check `func_num_args` output
`func_num_args` will always return a string so using `!=` is not necassary

--- a/src/Resources/templates/set.php.twig
+++ b/src/Resources/templates/set.php.twig
@@ -69,7 +69,7 @@
         );
     }
 {% else %}
-    if (\func_num_args() != 1) {
+    if (\func_num_args() !== 1) {
         throw new \BadMethodCallException(
             sprintf(
                 'set{{ property.name | classify }}() has one argument but %d given.',
