--- a/src/Resources/templates/add.php.twig
+++ b/src/Resources/templates/add.php.twig
@@ -21,7 +21,7 @@
  */
 {{ property.getAddVisibility() }} function add{{ property.name | singularize | classify }}({{ property.typeHint }} ${{ property.name | singularize }})
 {
-    if (\func_num_args() != 1) {
+    if (\func_num_args() !== 1) {
         throw new \BadMethodCallException(
             sprintf(
                 'add{{ property.name | classify }}() has one argument but %d given.',
