Added twig/twig ^3.0 forward compatibility and removed ^1.38.1 support.

--- a/src/Resources/templates/trait.php.twig
+++ b/src/Resources/templates/trait.php.twig
@@ -4,7 +4,7 @@
 namespace {{ namespace }};
 
 {% for alias, use in uses %}
-use {{ use }}{% if alias and alias == 0 %} as {{ alias }}{% endif %};
+use {{ use }}{% if alias is string %} as {{ alias }}{% endif %};
 {% endfor %}
 
 trait {{ name }}
