--- a/src/Resources/templates/set.php.twig
+++ b/src/Resources/templates/set.php.twig
@@ -165,7 +165,13 @@
     }
 
     $iv = openssl_random_pseudo_bytes(32);
-    openssl_seal(${{ property.name }}, $sealed_data, $env_keys, [$public_key], 'AES256', $iv);
+    if (false === openssl_seal(${{ property.name }}, $sealed_data, $env_keys, [$public_key], 'AES256', $iv)) {
+        $err_string = '';
+        while ($msg = openssl_error_string()) {
+            $err_string .= $msg . ' | ';
+        }
+        throw new \InvalidArgumentException(sprintf('openssl_seal failed. Message: %s', $err_string));
+    }
 
     $env_key        = bin2hex($env_keys[0]);
     $iv             = bin2hex($iv);
