--- a/src/Resources/templates/get.php.twig
+++ b/src/Resources/templates/get.php.twig
@@ -103,14 +103,15 @@
         return $decrypt($private_key_path);
     } catch (\InvalidArgumentException $e) {
         if (false == ($fallback_private_key_path = KeyRegistry::getPrivateKeyPath('{{ property.encryptionAlias() }}_fallback'))) {
-            throw new \InvalidArgumentException('Initial decryption failed and no fallback key was found.', 0, $e);
+            throw $e;
         }
 
         try {
             return $decrypt($fallback_private_key_path);
         } catch (\InvalidArgumentException $fallback_exception) {
             throw new \InvalidArgumentException(sprintf(
-                'Initial decryption failed and fallback also failed with message: %s',
+                "Decryption failed: [%s]\nFallback also failed: [%s]",
+                $e->getMessage(),
                 $fallback_exception->getMessage()
             ), 0, $e);
         }
